HOPER-4202 Fix overflow after form collapsing (#311)

--- a/hbw/app/assets/stylesheets/hbw.sass
+++ b/hbw/app/assets/stylesheets/hbw.sass
@@ -431,8 +431,7 @@
       cursor: pointer
 
   .panel-default,
-  .panel-group,
-  .panel-collapse.in
+  .panel-group
     overflow: visible
 li.danger
   a
